# adx-core-k

./: .eslintrc.json  .gitignore  Cargo.toml  DEMO-CREDENTIALS.md  DEV-SETUP.md  ERROR_PATH_FIXES.md  FINAL_TESTING_REPORT.md  FRONTEND_MIGRATION_GUIDE.md  GITHUB_CONNECTION_GUIDE.md  GITHUB_CONNECTION_TEST.md  GITHUB_SETUP_COMPLETE.md  GITHUB_SYNC_README.md  HOOK_INTEGRATION_SUMMARY.md  KIRO_HOOK_DOCUMENTATION.md  PROJECT_BOARD_SETUP.md  PROJECT_REPORT.md  PROJECT_SETUP_SUMMARY.md  PROJECT_TRACKING.md  QUICK-START.md  QUICK_START.md  README.md  TENANT_SERVICE_IMPLEMENTATION_PLAN.md  TESTING_INFRASTRUCTURE_COMPLETE.md  TEST_EXECUTION_SUMMARY.md  adx-core-final-sync-manager-summary.md  adx-core-parallelization-sync-summary.md  adx-core-sync-status-report.md  adx-core-task-sync-analysis-report.md  adx-core-task-sync-analysis.md  adx-core-task-sync-execution-summary.md  adx-core-task-sync-final-report.md  adx-core-task-sync-final-summary.md  adx-core-task-sync-manager-report.md  adx-core-task-sync-manager-summary.md  analyze-task-changes.ts  create-github-issues-simple.ts  create-github-issues.ts  final-github-sync-execution-summary.md  final-sync-status.md  github-sync-action-summary.md  (+46 more)
adx-core/: .env.example  Cargo.toml  INFRASTRUCTURE_SETUP.md  README.md
adx-core/apps/auth/: index.html  package.json  vite.config.ts
adx-core/apps/auth/src/: App.tsx
adx-core/apps/file/: package.json  vite.config.ts
adx-core/apps/file/src/: App.tsx
adx-core/apps/module/: index.html  package.json  vite.config.ts
adx-core/apps/module/src/: App.tsx
adx-core/apps/shell/: index.html  package.json  vite.config.ts
adx-core/apps/shell/src/: App.tsx  index.css
adx-core/apps/tenant/: package.json  vite.config.ts
adx-core/apps/tenant/src/: App.tsx
adx-core/apps/user/: package.json  vite.config.ts
adx-core/apps/user/src/: App.tsx
adx-core/apps/workflow/: package.json  vite.config.ts
adx-core/apps/workflow/src/: App.tsx
adx-core/bff-services/auth-bff/: .env.example  package.json  tsconfig.json
adx-core/bff-services/auth-bff/src/: server.ts
adx-core/bff-services/file-bff/: Cargo.toml  README.md  package.json  tsconfig.json
adx-core/bff-services/file-bff/src/: lib.rs  server.ts
adx-core/bff-services/file-bff/tests/: integration_tests.rs
adx-core/bff-services/module-bff/: .env.example
adx-core/bff-services/tenant-bff/: .env.example  README.md  package.json
adx-core/bff-services/user-bff/: .env.example
adx-core/bff-services/user-bff/src/: main.rs
adx-core/bff-services/workflow-bff/: .env.example  Cargo.toml
adx-core/bff-services/workflow-bff/src/: lib.rs  main.rs
adx-core/config/: default.toml
adx-core/docs/: README.md  temporal-setup-guide.md  temporal-workflow-versioning-strategy.md
adx-core/docs/api/: README.md  api-gateway.md
adx-core/docs/deployment/: README.md
adx-core/docs/developer-guide/: module-federation.md
adx-core/docs/launch/: go-live-checklist.md
adx-core/docs/operations/: production-deployment-guide.md  production-readiness-checklist.md
adx-core/docs/operations/runbooks/: disaster-recovery.md  monitoring.md  security-incident-response.md  service-deployment.md
adx-core/docs/user-guide/: README.md
adx-core/infrastructure/docker/: Dockerfile.db-migrator  docker-compose.database.yml  docker-compose.dev.yml  docker-compose.temporal.yml  init-db.sql  init.sql  pgadmin-servers.json  prometheus.yml  redis.conf
adx-core/infrastructure/docker/temporal-config/: development-sql.yaml
adx-core/infrastructure/kubernetes/: api-gateway-deployment.yaml  microservices-deployment.yaml  namespace.yaml
adx-core/infrastructure/monitoring/: prometheus.yml
adx-core/infrastructure/monitoring/alertmanager/: config.yml
adx-core/infrastructure/monitoring/loki/: loki-config.yml
adx-core/infrastructure/monitoring/promtail/: promtail-config.yml
adx-core/infrastructure/monitoring/rules/: adx-core-alerts.yml
adx-core/infrastructure/production/: .env.example  README.md  docker-compose.prod.yml
adx-core/infrastructure/production/monitoring/: alert_rules.yml  loki-config.yml  prometheus.yml  promtail-config.yml
adx-core/infrastructure/production/nginx/: nginx.conf
adx-core/monitoring/: deployment-monitoring.yml
adx-core/scripts/: README.md  build.sh  db-setup.sh  deploy.sh  dev-start-all.sh  dev-start.sh  dev-stop-all.sh  dev-stop.sh  setup-temporal-namespaces.sh  temporal-dev-setup.sh  test.sh
adx-core/scripts/backup/: backup-database.sh  restore-database.sh
adx-core/scripts/security/: security-audit.sh
adx-core/services/ai-service/: Cargo.toml  README.md
adx-core/services/api-gateway/: .env.example  Cargo.toml  README.md
adx-core/services/auth-service/: Cargo.toml  README.md
adx-core/services/file-service/: Cargo.toml
adx-core/services/license-service/: Cargo.toml  README.md
adx-core/services/module-service/: Cargo.toml  README.md
adx-core/services/security-service/: Cargo.toml
adx-core/services/shared/: Cargo.toml  build.rs
adx-core/services/tenant-service/: Cargo.toml
adx-core/services/user-service/: Cargo.toml  verify_workflows  verify_workflows.rs
adx-core/services/white-label-service/: Cargo.toml  README.md
adx-core/services/workflow-service/: Cargo.toml  README.md
adx-core/tests/: integration_test.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
tests/: Cargo.toml  README.md  integration_tests.rs  test_runner.rs
tests/cross-platform/: compatibility.test.ts
tests/desktop/: global-setup.ts  global-teardown.ts  tauri-integration.test.ts
tests/e2e/: global-setup.ts  global-teardown.ts  micro-frontend-integration.spec.ts  playwright.config.ts
tests/e2e/specs/: cross-microfrontend.spec.ts
tests/integration/: circuit_breakers.rs  cross_service_tests.rs  integration_tests.rs  load_testing.rs  micro_frontend.rs  mod.rs  multi_tenant.rs  test_environment.rs  user_workflows.rs
tests/mobile/: android-integration.test.ts  ios-integration.test.ts
tests/performance/: global-setup.ts  global-teardown.ts  load_testing.rs
tests/security/: security_tests.rs
(+849 files in other folders)
