[workspace]
resolver = "2"
members = [
    "services/shared",
    "services/api-gateway", 
    "services/auth-service",
    "services/user-service",
    "services/file-service",
    "services/workflow-service",
    "services/tenant-service",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
thiserror = "1.0"
jsonwebtoken = "9.0"
bcrypt = "0.15"
redis = "0.24"
prometheus = "0.14"

# Integration test dependencies
reqwest = { version = "0.11", features = ["json"] }

# Workspace-level packages for testing
[package]
name = "adx-core"
version = "0.1.0"
edition = "2021"

[dependencies]
adx-shared = { path = "services/shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }