[workspace]
members = [
    "services/shared",
    # Temporarily excluding services with compilation issues for quick dev setup
    # "services/api-gateway",
    # "services/auth-service",
    # "services/user-service", 
    # "services/file-service",
    # "services/tenant-service",
    # "services/workflow-service",
    # "services/ai-service",
    # "services/module-service",
    # "services/white-label-service",
    # "services/license-service",
    # "services/security-service",
]

resolver = "2"

[workspace.dependencies]
# Core async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Web framework and HTTP
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace", "compression-br", "compression-gzip", "timeout"] }
hyper = "1.0"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database and persistence
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Authentication and security
jsonwebtoken = "9.0"
bcrypt = "0.15"
argon2 = "0.5"

# Configuration and environment
config = "0.13"
dotenvy = "0.15"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.21"
opentelemetry = "0.20"
opentelemetry-jaeger = "0.19"
prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Temporal workflow engine - gRPC-based integration
# Note: Official Temporal Rust SDK is not yet available
# Using gRPC client implementation for Temporal server communication
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tonic-build = "0.11"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.19"

# Testing
mockall = "0.12"
wiremock = "0.5"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
debug = true
opt-level = 0