[package]
name = "adx-core-integration-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "integration_tests"
path = "integration_tests.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Temporal (placeholder - would use actual Temporal Rust SDK)
# temporal-client = "0.1"

# Testing utilities
testcontainers = "0.15"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Encoding
base64 = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Additional test utilities if needed