[package]
name = "adx-core-frontend"
version = "1.0.0"
description = "ADX CORE Frontend - Universal cross-platform application"
authors = ["ADX CORE Team"]
license = "MIT"
repository = "https://github.com/adx-core/frontend"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["shell-open"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-window-state = "2.0.0-beta"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]