[package]
name = "workflow-bff"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace", "compression-br", "compression-gzip", "timeout"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database and caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client for API Gateway communication
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Authentication and security
jsonwebtoken = "9.0"

# Configuration
config = "0.13"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
md5 = "0.7"

[dev-dependencies]
# Testing
mockall = "0.12"
wiremock = "0.5"
axum-test = "14.0"