[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
adx-shared = { path = "../shared" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
reqwest = { version = "0.11", features = ["json"] }