[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }

# Shared library
adx-shared = { path = "../shared" }

# Additional dependencies for API Gateway
hyper = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }