[package]
name = "adx-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
squads-temporal-sdk = { workspace = true }
squads-temporal-sdk-core = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true }

# Additional dependencies for shared utilities
async-trait = "0.1"
derive_more = "0.99"