[package]
name = "adx-shared"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db-manager"
path = "src/bin/db-manager.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Temporal SDK dependencies - gRPC-based implementation
# temporal-sdk-core = { workspace = true }  # Will be enabled when stable
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
# Additional dependencies for Temporal gRPC integration
tonic-build = "0.11"
config = { workspace = true }
jsonwebtoken = { workspace = true }

# Additional dependencies for shared utilities
async-trait = "0.1"
derive_more = "0.99"
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true, features = ["derive"] }
bcrypt = "0.15"
axum = { workspace = true }