[package]
name = "adx-shared"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db-manager"
path = "src/bin/db-manager.rs"

[[bin]]
name = "temporal-sdk-test"
path = "src/bin/temporal-sdk-test.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Temporal SDK dependencies - gRPC-based implementation
# Note: Official Temporal Rust SDK is not yet available
# Using gRPC client implementation for Temporal server communication
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-build = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true }

# Additional dependencies for shared utilities
async-trait = "0.1"
derive_more = "0.99"
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true, features = ["derive"] }
bcrypt = "0.15"
axum = { workspace = true }