[package]
name = "tenant-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core framework
axum = { version = "0.7", features = ["multipart", "json", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database and caching
sqlx = { workspace = true, features = ["json"] }
redis = { version = "0.25", features = ["tokio-comp"] }

# Serialization and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# Shared libraries
adx-shared = { path = "../shared" }
