[package]
name = "tenant-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
temporal-sdk = { workspace = true }
temporal-sdk-core = { workspace = true }
config = { workspace = true }
clap = { workspace = true }

# Local dependencies
adx-shared = { path = "../shared" }

# Service-specific dependencies
async-trait = "0.1"