[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
adx-shared = { path = "../shared" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bcrypt = { workspace = true }
tower = "0.4"
tower-http = "0.5"