[package]
name = "workflow-service"
version = "0.1.0"
edition = "2021"

[dependencies]
adx-shared = { path = "../shared" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
# temporal-sdk = { version = "0.1", optional = true }  # TODO: Add when Temporal Rust SDK is available
