[package]
name = "workflow-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["json"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "timeout", "trace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
sqlx = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# temporal-sdk = { workspace = true }
# temporal-sdk-core = { workspace = true }
config = { workspace = true }
clap = { workspace = true, features = ["derive"] }

# Local dependencies
adx-shared = { path = "../shared" }

# Service-specific dependencies
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"